# glfw-transparent-blur

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: gui.h  main.cpp  windows_swca.h
